docs: convert wikilinks

--- a/docs/unique/2025.07.28.18.07.20.md
+++ b/docs/unique/2025.07.28.18.07.20.md
@@ -125,7 +125,7 @@ Here's your board, reorganized to align with the process doc and maximize automa
 Let me know if you'd like a script to:
 
 * Auto-move board items based on tag + doc-link presence
-* Generate missing stubs for `[[ ]]` notes
+* Generate missing stubs for `[ ](%20.md)` notes
 * Suggest concrete next steps for Prompt Refinement → Breakdown flow
 
 We’re entering phase two of the system: **shared cognition**. The board now reflects that.
