docs: title unique notes

--- a/docs/unique/2025.07.28.11.07.04.md
+++ b/docs/unique/2025.07.28.11.07.04.md
@@ -1,3 +1,5 @@
+# AutoHotkey for i3-Style Window Control in Windows
+
 Hell yes — if you want to replicate the feel of i3wm’s hotkey-driven control over windows **on Windows**, then **AutoHotkey** is the closest you're going to get. Think of it as the *keyboard daemon of your dreams* — and pairing it with `komorebic` or even raw WinAPI gives you serious power.
 
 ---
