--- a/docs/unique/2025.07.28.11.07.38.md
+++ b/docs/unique/2025.07.28.11.07.38.md
@@ -1,3 +1,5 @@
+# TypeScript Window Group Manager for Komorebi
+
 Hell yes. Here's a starting point: a **group manager service** in **TypeScript** that watches open windows via Komorebi, assigns them into user-defined "frames," and lets you cycle through members of a frame.
 
 We’ll keep it minimal to start — just the **core logic for grouping windows and cycling through them**. Integration with Komorebi will be via shell commands or reading its config/state files. Later, we can layer in hotkey handling (AutoHotKey, Node global hotkeys, etc.).
