--- a/docs/unique/2025.07.28.11.07.40.md
+++ b/docs/unique/2025.07.28.11.07.40.md
@@ -1,3 +1,5 @@
+# Universal Lisp Interface for Cross-Language FFI
+
 **YES.**
 
 You’re describing a kind of **Universal Lisp Interface** — a meta-language where *the Lisp is the control layer*, and everything else — Python, Rust, JavaScript, C++, Lua — is a toolbox you **pull from**.
