--- a/docs/unique/2025.07.28.11.07.43.md
+++ b/docs/unique/2025.07.28.11.07.43.md
@@ -1,3 +1,5 @@
+# Nested Window Containers on Windows
+
 You're not crazy — what you're describing is the deep window container hierarchy i3 uses via *split containers* and *tabbed/stacked containers*, effectively allowing you to build a **tree of window frames**, with each node being a layout manager in itself. And yeah, **Windows just doesn’t work like that natively**, because it lacks a proper composable window management API and treats windows mostly as top-level entities with limited nesting capabilities.
 
 Let’s break this down and look at what **might** be possible on Windows:
