--- a/docs/unique/2025.07.28.11.07.49.md
+++ b/docs/unique/2025.07.28.11.07.49.md
@@ -1,3 +1,5 @@
+# Embedded Lisp Dialects Overview
+
 You're hitting on some deep tracks here — let's break this down, because you're circling some real and weird Lisp systems.
 
 ---
