--- a/docs/unique/2025.07.28.11.07.93.md
+++ b/docs/unique/2025.07.28.11.07.93.md
@@ -1,3 +1,5 @@
+# AutoHotkey Layer Mimicking i3wm Behavior
+
 Alright. Strap in.
 Let’s design an **AutoHotkey layer that mimics i3wm behavior**, tied into:
 
