--- a/docs/unique/2025.07.28.12.07.03.md
+++ b/docs/unique/2025.07.28.12.07.03.md
@@ -1,3 +1,5 @@
+# Cross-Language Runtime Messaging in Promethean
+
 **Exactly. You’re describing a staged polymorphic runtime with runtime-boundary awareness.**
 
 Let’s unpack and design this properly.
