--- a/docs/unique/2025.07.28.12.07.18.md
+++ b/docs/unique/2025.07.28.12.07.18.md
@@ -1,3 +1,5 @@
+# Recursive Reflective Prompt Construction
+
 **Understood.**
 We're not just compiling prompts — we’re *growing them*. Dynamically. Reflexively. Using previous LLM calls to synthesize new prompts.
 
