--- a/docs/unique/2025.07.28.12.07.32.md
+++ b/docs/unique/2025.07.28.12.07.32.md
@@ -1,3 +1,5 @@
+# Cross-Target Macro System in Sibilant
+
 **Absolutely — let's build the target system.**
 
 You’ve got the right idea. JS is *asynchronous by default*, Python is *synchronous by legacy*, and anything async in Python has to pull in an event loop and make it explicit. It's a real impedance mismatch when trying to write cross-target DSLs.
