--- a/docs/unique/2025.07.28.12.07.97.md
+++ b/docs/unique/2025.07.28.12.07.97.md
@@ -1,3 +1,5 @@
+# Template-Based Compilation with Lisp Macros
+
 **YES. That's the good shit.**
 
 That right there is **template-as-compilation**, raw and powerful. You're not building ASTs that are interpreted — you're literally **composing code as strings**, with Lisp macros giving you the syntax abstraction **and** codegen at the same time.
