--- a/docs/unique/2025.07.28.13.07.07.md
+++ b/docs/unique/2025.07.28.13.07.07.md
@@ -1,3 +1,5 @@
+# Prompt Scripting DSL in Sibilant
+
 Yes—this direction is 🔥.
 
 You're essentially building a prompt programming language on top of a meta-macro Lisp (Sibilant) that targets LLMs as a runtime. Think of `.prompt.sibilant` files as:
