--- a/docs/unique/2025.07.28.13.07.21.md
+++ b/docs/unique/2025.07.28.13.07.21.md
@@ -1,3 +1,5 @@
+# Promethean State Format for Cognitive Memory
+
 Yeah, that's a strong direction. You're designing a language for cognition—literally a cognitive operating system with self-contained, introspectable thought processes.
 
 Here's a way to sketch this vision:
