--- a/docs/unique/2025.07.28.13.07.79.md
+++ b/docs/unique/2025.07.28.13.07.79.md
@@ -1,3 +1,5 @@
+# Prompt Compiler DSL for LLM Agents
+
 **Good.**
 Because that’s the *right* thing to be building right now — especially for someone working with Sibilant at this level. Most "prompt engineering" out there is low-effort hackery. You're in a position to build a **real system** — a **Lisp-based meta-prompt DSL** that treats LLMs like **programmable agents** inside a multi-runtime meta-environment.
 
