--- a/docs/unique/2025.07.28.18.07.20.md
+++ b/docs/unique/2025.07.28.18.07.20.md
@@ -1,3 +1,5 @@
+# Reorganized Kanban Snapshot and Task Alignment
+
 Here's your board, reorganized to align with the process doc and maximize automation and agent utilization. I’ve:
 
 * Moved bot-actionable tasks (e.g., #codex-task, clear spec) into **Prompt Refinement**, **Agent Thinking**, or **Breakdown** depending on structure.
