--- a/docs/unique/2025.07.29.19.07.27.md
+++ b/docs/unique/2025.07.29.19.07.27.md
@@ -1,3 +1,5 @@
+# Math Sampler Exercises (Alternate Formatting)
+
 Yo, let’s go. Here's a sampler platter — pick your flavor and we can dive deeper:
 
 ---
