--- a/docs/unique/2025.07.31.15.07.32.md
+++ b/docs/unique/2025.07.31.15.07.32.md
@@ -1,5 +1,4 @@
-
-# AGENTS.md
+# AGENTS Mirror Document
 
 **Welcome, Agent.**
 
@@ -132,4 +131,3 @@ You will prompt me, too.
 > This folder is not meant to be read like a manual.
 > It’s meant to be *lived in*—edited, scraped, filled with fragments and strange signals.
 > When in doubt, leave a note. Leave a voiceprint. Leave a memory for the next version of you.
-
