--- a/docs/unique/2025.07.31.16.07.75.md
+++ b/docs/unique/2025.07.31.16.07.75.md
@@ -1,3 +1,5 @@
+# docs/prompts Directory Layout and Philosophy
+
 Got it—folder-based structure instead of file suffixes. That gives us much more room for layered growth and agent-specific behavior. Here's a refined plan that structures `docs/prompts/` into **purpose-driven folders**, each with its own philosophy and use case.
 
 We’ll treat `AGENTS.md` as the **index, manifesto, and onboarding file** for this whole area of the project.
