--- a/docs/unique/2025.08.01.21.08.38.md
+++ b/docs/unique/2025.08.01.21.08.38.md
@@ -1,3 +1,5 @@
+# TypeScript Sentence Splitting Function Draft
+
 ```typescript
 function splitSentances(text: string) {
     const cleaned = sentences.map((s) => s.trim()).filter((s) => s.length > 0);
