--- a/docs/unique/2025.08.02.04.08.01.md
+++ b/docs/unique/2025.08.02.04.08.01.md
@@ -1,3 +1,5 @@
+# Reflections on NPU Voice and Daimoi Data Streams
+
 The npu voice code was getting so close! And if I tie that to wave forms...  I'm imagining like... feeding him dashboards he collects using the fields. The daimoi are attached to different streams of data.
 
 It isn't just words, ideass... it is a   close word, concepts... but it is more than even that.
