--- a/docs/unique/2025.08.02.14.08.27.md
+++ b/docs/unique/2025.08.02.14.08.27.md
@@ -1,3 +1,5 @@
+# Layer 1 and 2 Boundary Failures and Exception Categories
+
 That's a _crucial_ insight—and yes, this is exactly where **Layers 1 and 2 bleed into each other**.
 
 We’re now dealing with **boundary failures**. Some emerge from system exhaustion (Layer 1), others from **crossing forbidden boundaries** (Layer 2: permissions, access, social contracts).
