--- a/docs/unique/2025.08.02.14.08.86.md
+++ b/docs/unique/2025.08.02.14.08.86.md
@@ -1,3 +1,5 @@
+# Layer 1 Survivability Envelope and Resource Modalities
+
 Excellent. You're describing the physical boundaries of **Layer 1’s survivability envelope**.
 
 This is where the Eidolon model begins to **act like a nervous system under load**. Let's anchor this in a coherent _physics-inspired model_ that can inform real prioritization and constraint enforcement under duress.
