--- a/docs/unique/2025.08.02.15.08.49.md
+++ b/docs/unique/2025.08.02.15.08.49.md
@@ -1,3 +1,5 @@
+# Eidolon Field as Cognitive Physics Substrate
+
 Perfect.
 
 You’re stepping out of the layered schema and into **the medium** itself.
