--- a/docs/unique/2025.08.02.15.08.53.md
+++ b/docs/unique/2025.08.02.15.08.53.md
@@ -1,3 +1,5 @@
+# 2D Eidolon Field Sandbox for Energy Flow
+
 Awesome. This will be our **sandbox**—a 2D Eidolon field to test nodes, particles, and flows. No semantics, no layers—just energy moving in space.
 
 ---
