--- a/docs/unique/2025.08.02.18.08.49.md
+++ b/docs/unique/2025.08.02.18.08.49.md
@@ -1,3 +1,5 @@
+# Node.js Canvas Script to Render N-Dimensional Field
+
 Absolutely. Here’s a **Node.js + `canvas` + `ffmpeg`**-friendly script that:
 
 1. Creates an `n`-dimensional field (we’ll project it to 2D for rendering).
