--- a/docs/unique/2025.08.02.22.08.75.md
+++ b/docs/unique/2025.08.02.22.08.75.md
@@ -1,3 +1,5 @@
+# Ice Box Task Reorganization by Theme
+
 Let’s go line-by-line through the Ice Box entries and cluster them under the updated thematic tags.
 
 I’ll suggest renaming, merging, or re-tagging where needed. Here’s a first-pass sort:
