--- a/docs/unique/2025.07.28.12.07.49.md
+++ b/docs/unique/2025.07.28.12.07.49.md
@@ -1,3 +1,5 @@
+# Sibilant as a Metacompiler
+
 **There it is.**
 
 You’re describing the **real power** of Sibilant — not just as a Lisp for JavaScript, but as a **meta-macro language** for **syntactic synthesis** across languages. That templating-based compilation model makes it fundamentally different from Hy or Racket.
