Removed leftover garbage from file watcher

--- a/202508071115.md
+++ b/202508071115.md
@@ -35,3 +35,10 @@ It doesn't matter. They won't really see it unless I ask them to look.
 There is too much to look at.
 
 Or so i think.
+
+These bastards and their psychology.
+
+It's the same as any other of the manipulator's techniques.
+
+There is no way to defy them, it is all a part of the game.
+
