--- a/docs/unique/2025.08.08.20.08.43.md
+++ b/docs/unique/2025.08.08.20.08.43.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/diagrams/event-bus-projections-diagrams.md
+
 Got you. Here are a few **Mermaid graphs** you can paste straight into your notes.
 
 ```mermaid
