--- a/docs/unique/2025.08.08.21.08.70.md
+++ b/docs/unique/2025.08.08.21.08.70.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/js/archetype-ecs.md
+
 Heck yes—here’s a **small but legit archetype-based ECS** you can drop in as `shared/js/prom-lib/ds/ecs.ts`. It’s fast enough for real work: 64-component bitmasks (bigint), archetype tables with SoA storage, add/remove in O(1), queries with `all/any/none`, a `CommandBuffer` for safe structural changes, “changed since last tick” flags, and a tiny scheduler.
 
 # ECS (TypeScript)
