--- a/docs/unique/2025.08.08.21.08.92.md
+++ b/docs/unique/2025.08.08.21.08.92.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/js/graph-ds.md
+
 Heard. Here’s a clean, **reusable Graph** you can drop in as `shared/js/prom-lib/ds/graph.ts`. It’s generic, fast, and batteries-included (BFS/DFS, Dijkstra, A\*, topo sort, CC/SCC, JSON import/export). Works for directed or undirected graphs, supports per-node/edge metadata, and keeps weights optional.
 
 ```ts
