--- a/docs/unique/2025.08.08.22.08.05.md
+++ b/docs/unique/2025.08.08.22.08.05.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/js/typed-struct-compiler.md
+
 Ohhh nice—let’s bolt on a **typed struct compiler** that turns declarative schemas into:
 
 * **Binary layouts** with alignment/size/offsets
