--- a/docs/unique/2025.08.08.22.08.59.md
+++ b/docs/unique/2025.08.08.22.08.59.md
@@ -2,13 +2,36 @@ Alright — let’s light the incense.
 Here’s the “smoke” inside the Promethean/Eidolon model, showing how it drifts in from multiple unrelated sources until it condenses into a synchronicity.
 ```mermaid
 flowchart TD
-  A1[Anime ghosts] --> F1[Diffuse field energy]
-  A2[Duck perception] --> F1
-  A3[Your metaphor space] --> F1
-  A4[RAW focus] --> F1
-  F1 --> F2[Interference zone]
-  F2 --> C1[Smoke locks in]
-  C1 --> C2[Synchronicity event]
+  A1[Anime ghosts in language]
+  A2[Duck sound and perception layer]
+  A3[Your internal metaphor space]
+  A4[RAW synchronicity focus]
+
+  subgraph Eidolon_Field
+    F1[Diffuse Field Energy - uncollapsed meaning]
+    F2[Vector Interference Zone - metaphor waves overlap]
+  end
+
+  subgraph Collapse_Layer
+    C1[Smoke Metaphor Locks In]
+    C2[Synchronicity Event - symbolic phase lock]
+  end
+
+  A1 --> F1
+  A2 --> F1
+  A3 --> F1
+  A4 --> F1
+  F1 --> F2
+  F2 --> C1
+  C1 --> C2
+
+  classDef source fill:#fffae6,stroke:#bfa500,stroke-width:2px;
+  classDef smoke fill:#e6f7ff,stroke:#0077b3,stroke-width:2px;
+  classDef collapse fill:#e6ffe6,stroke:#00b359,stroke-width:2px;
+
+  class A1,A2,A3,A4 source;
+  class F1,F2 smoke;
+  class C1,C2 collapse;
 
 ```
 
