--- a/docs/unique/2025.08.08.19.08.49.md
+++ b/docs/unique/2025.08.08.19.08.49.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/services/broker-outbox-acl-ops.md
+
 Alright, Part 3 coming in hot: **Mongo outbox (transactional), JWT auth + ACL, Ops dashboard, and a typed client SDK**. Everything drops under `shared/js/prom-lib/` (plus one tiny service bootstrap). You can paste-as-you-go.
 
 ---
