--- a/docs/unique/2025.08.08.20.08.31.md
+++ b/docs/unique/2025.08.08.20.08.31.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/tooling/obsidian-ignore-node-modules-regex.md
+
 Ah — so you want a regex that **only matches** things inside a `node_modules` folder.
 That way, Obsidian can use it in the "Exclude files" list to filter them out.
 
