--- a/docs/unique/202508071111.md
+++ b/docs/unique/202508071111.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/tooling/pm2-ecosystem-patterns.md
+
 You're **90% of the way there** to having a clean, abstracted PM2 orchestration layer for Promethean. Let’s turn your current pattern into a more maintainable system that:
 
 ---
