--- a/docs/unique/2025.08.08.20.08.56.md
+++ b/docs/unique/2025.08.08.20.08.56.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/services/partitions-schema-registry-projector.md
+
 Alright, **Part 5**: stateful partitions + rebalancing, a tiny schema-registry (Zod) with compat rules, and a **Changelog Projector** that materializes a topic into a Mongo collection with upserts & tombstones. All drop-in. ⚙️
 
 ---
