--- a/docs/unique/2025.08.08.21.08.09.md
+++ b/docs/unique/2025.08.08.21.08.09.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/js/ecs-scheduler-and-prefabs.md
+
 Heck yes—let’s wire a **real system scheduler** on top of the ECS you’ve got, plus **resources**, **dependency graph**, **conflict-aware batching**, and **prefabs/blueprints**. Paste these under `shared/js/prom-lib/ds/`.
 
 # 1) System Scheduler (archetype ECS + resource-aware DAG)
