--- a/docs/unique/2025.08.08.20.08.52.md
+++ b/docs/unique/2025.08.08.20.08.52.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/services/schema-evolution-dlq-changefeed.md
+
 Alright, **Part 6**: schema evolution workflow (dual-write + upcasters), a **DLQ** with replay, **Mongo changefeeds** → topics, and a tiny **CI linter** for topic/schema hygiene. Paste under `shared/js/prom-lib/` + a small `scripts/` dir.
 
 ---
