--- a/docs/unique/2025.08.08.20.08.83.md
+++ b/docs/unique/2025.08.08.20.08.83.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/services/state-snapshots-transactional-projector-timetravel-devharness.md
+
 Alright, **Part 7**: **State Snapshots API**, **Transactional Projector**, **Time-Travel queries**, and a tiny **Dev Harness** for end-to-end tests. Paste ’em under `shared/js/prom-lib/` (plus one `tests/` file).
 
 ---
