--- a/docs/unique/2025.08.08.21.08.31.md
+++ b/docs/unique/2025.08.08.21.08.31.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/js/ecs-offload-workers.md
+
 Heck yeah—let’s make this **parallel, portable, and safe**:
 
 * **Node backend:** uses `worker_threads` pool.
