--- a/docs/unique/2025.08.08.22.08.06.md
+++ b/docs/unique/2025.08.08.22.08.06.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/dsl/compiler-kit-foundations.md
+
 Love it. Let’s start a **compiler kit** you can grow into whatever language you want. I’ll give you:
 
 * a tiny **tokenizer**
