--- a/docs/unique/2025.08.08.22.08.39.md
+++ b/docs/unique/2025.08.08.22.08.39.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/js/zero-copy-snapshots-and-workers.md
+
 Oh you want **actual zero-copy** between main + workers. Let’s do it right:
 
 * Use **SharedArrayBuffer** (SAB) when possible (Node: yes; Browser: only if `crossOriginIsolated`).
