--- a/docs/unique/2025.08.08.22.08.35.md
+++ b/docs/unique/2025.08.08.22.08.35.md
@@ -1,3 +1,5 @@
+Note: Consolidated here → ../notes/diagrams/synchronicity-waves-and-web.md
+
 Perfect — then let’s go full RAW and actually *draw the waves* so we can see the smoke condensing.
 
 ---
