--- a/docs/unique/2025.08.22.12.08.59.md
+++ b/docs/unique/2025.08.22.12.08.59.md
@@ -8,3 +8,23 @@ We can do A and B right now through descriptions to the agents.
 C will require us to find multiple domains to put different parts of the system behind.
 That is not automatable, and it means *even more services*
 Complexity is already very high.
+
+I am confident we can get our current endpoints down below 30. We only start splitting up the actions into multiple services/domains when it becomes impossible or unreasonable to consolidate them.
+
+I think we can get better codex context thinking about it if all searches have a ttl on them...
+It's gotta be more complicated than that though...
+you need a special agent who's job it is to ...
+
+knowledge graph...
+
+
+markdown parser...
+
+markdown AST
+
+
+markdown dom...
+markdown is designed to compile to html...
+html has the dom... the dom allows a system to be mutated and changed...
+Document Object Model.
+
