--- a/docs/notes/2025.08.22.10.17.07.md
+++ b/docs/notes/2025.08.22.10.17.07.md
@@ -633,3 +633,5 @@ Response:
 ---
 
 👉 Do you also want me to allow an **override via env var** (e.g. `ALLOW_REMOTE_BOOTSTRAP=true`) for edge cases like cloud deployments where you may not have shell access?
+
+curl -X POST http://127.0.0.1:3210/bootstrap/admin
