--- a/docs/Daily/2025-08-24.md
+++ b/docs/Daily/2025-08-24.md
@@ -1,3 +1,4 @@
+# Early morning
 And again I didn't write in here!
 But maybe it's cause this doesn't open up if I leave it open over night XD
 
@@ -36,3 +37,28 @@ I made what I could handle, I understand it, I'm getting a rhythm.
 we have to pay for the chat gpt subscription soon
 
 we've almost got like... a login system...
+
+# Evening
+
+We made progress on sibilant in our repo.
+We figured out why we wrapped it the way that we did.
+Sibilant just never had to provide a mechanisim with in the compiler to do what we were doing with it. As in we were injecting imports/headers.
+include was kinda treated as the main way of doing things, you'd just include everything you wanted and bam.
+
+But I was doing something closer to what include means in C. I brought in macros that way,
+and I broad in boiler plate import statements.
+
+If I do want to continue with this, it will stilll be a bit of work, but we have a working compliler in the repo now.
+
+We're gonna go do something else for a while now.
+
+let this sit.
+
+I just.... I needed to make progress on this.
+I don't want to write the stuff the hack way I had before... We're doin this the right way.
+Like when we moved the engine over.
+
+But we've been through enough today.
+
+It's also refreshing to do lisp like that, AI just cannot help me the same way it can with other stuff.
+
