feat: manage changelog fragments by PR

--- a/changelog.d/99999.added.md
+++ b/changelog.d/99999.added.md
@@ -1,1 +1,1 @@
-Added requirements and acceptance criteria for accepted agile tasks.
+Add utility scripts to rename changelog fragments with the PR number and verify fragment names.
