--- a/docs/unique/2025.08.31.16.57.42.md
+++ b/docs/unique/2025.08.31.16.57.42.md
@@ -1,3 +1,26 @@
+---
+uuid: 8b8e6103-30a4-4d66-b5f2-87db1612b587
+created_at: 2025.08.31.16.57.42.md
+filename: Promethean Pipelines
+description: >-
+  A set of idempotent, marker-safe pipelines for detecting API drift, generating
+  semver recommendations, creating type dependency graphs, and automating
+  documentation tasks. These pipelines cache outputs under `.cache/<pkg>` and
+  follow a consistent workflow for scalable repo analysis.
+tags:
+  - api-diff
+  - semver
+  - typegraph
+  - codemods
+  - i18npack
+  - licscan
+  - test-gap
+  - glossary
+  - adr-bot
+  - riskmap
+  - docs
+  - pipeline
+---
 love that. treat repos like dataflows and CLIs like transforms. here are high-leverage pipelines we can bolt on next (all idempotent, marker-safe, cached under `.cache/<pkg>`):
 
 ## menu of new pipelines
