--- a/docs/unique/2025.08.31.18.14.03.md
+++ b/docs/unique/2025.08.31.18.14.03.md
@@ -1,3 +1,26 @@
+---
+uuid: 3a3bf2c9-c0f6-4d7b-bf84-c83c70dece3f
+created_at: 2025.08.31.18.14.03.md
+filename: Promethean Documentation Pipeline Overview
+description: >-
+  This document outlines the core themes and new packages in the Promethean
+  project, focusing on how they integrate with pipelines, caching, and
+  cross-document similarity. It details the workflow for document enrichment,
+  code analysis, and API change governance using Ollama and JSON caches. The
+  system emphasizes idempotent CLI steps and modular pipelines for efficient
+  development.
+tags:
+  - Promethean
+  - CLI
+  - pipelines
+  - Ollama
+  - code analysis
+  - API governance
+  - document enrichment
+  - semantic versioning
+  - cross-document similarity
+  - cache
+---
 here’s the high-level snapshot of what we’ve built together, plus how it all fits.
 
 # Core themes
