--- a/docs/unique/2025.08.31.19.50.08.md
+++ b/docs/unique/2025.08.31.19.50.08.md
@@ -1,3 +1,24 @@
+---
+uuid: 6b63edca-7637-4fb0-bc85-d498c31cc46e
+created_at: 2025.08.31.19.50.08.md
+filename: 'Promethean Pipelines: Local TypeScript-First Workflow'
+description: >-
+  A set of plug-and-play pipelines for generating documentation graphs, OpenAPI
+  specs, RAG systems, and code health checks—all using local tools and
+  TypeScript. Each pipeline is designed to be composable and zero-SaaS, with
+  clear step-by-step implementations.
+tags:
+  - TypeScript
+  - local pipelines
+  - RAG
+  - OpenAPI
+  - code health
+  - composable workflows
+  - Qdrant
+  - Zod
+  - Orval
+  - dependency analysis
+---
 Love this question. Here are a bunch of *plug-and-play* pipelines we can add in the same style as your `symdocs` one—zero SaaS, all local, TypeScript-first. I kept each to a few clear steps so they’re composable.
 
 ```yaml
