fix: align package license text

--- a/changelog.d/2025.09.03.01.29.14.changed.md
+++ b/changelog.d/2025.09.03.01.29.14.changed.md
@@ -1,1 +1,1 @@
-- updated package licenses to GPL-3.0-only and added LICENSE.txt to subpackages
+Update package licenses to GPL-3.0-only and add LICENSE.txt to: @promethean/cephalon, @promethean/discord-embedder, @kit-js/repl.
