fix: remove obsolete session search and add linguistic search support
- replace "search across any agent session" with "lingustic and symbolic search across any agent session"
- add support for inter-agent communication via unified format
- enhance CLI and UI capabilities for agent session management

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -3,7 +3,8 @@
 The pantheon management framework centralizes abstractions for agents across various platforms.
 it is a unified interface that allows you to create, define, and manage agents from any platform.
 It provides a centralized CLI and UI for managing agent sessions.
-search across any agent session.
+lingustic and symbolic search across any agent session.
 a single unified format for creating agents that can be used in any platform.
 A single unified format for creating and managing tools used in any platform.
 A single unified format for using MCP servers in any platform.
+facilitates inter-agent communication
