fix: remove cjs exports and convert agent-context to di-based factory
- ✅ Removed CJS exports from `@promethean/agent`, `@promethean/agents-workflow`, `@promethean/pantheon`, `@promethean/agent-management-ui`, `@promethean/agent-ecs`, and `@promethean/agent-generator` package.json
- ✅ Added `makeAuthService` factory function with DI support
- ✅ Added `AuthServiceConfig` and `AuthServiceDeps` types
- ✅ Maintained backward compatibility with `JWTAuthService` class
- ✅ Exported new factory and types from index.ts

--- a/changelog.d/2025.10.20.18.01.49.md
+++ b/changelog.d/2025.10.20.18.01.49.md
@@ -13,11 +13,18 @@ High-priority architectural fixes for the `packages/agents` tree to address doma
   - ✅ Converted `AgentOSCommandExecutor` to `makeExecutor` factory in `executor.ts`
   - ✅ Updated `NLPService` to use new factories, added `makeNLPService` functional factory
   - ✅ Fixed tsconfig.json references and build issues
-
-### 🔄 NEXT TASKS
-
-- **Task 4**: Fix package.json exports to ESM-only across agents packages
-- **Task 5**: Convert `agent-context` manager to DI-based factory
+- **Task 4**: Fixed package.json exports to ESM-only across agents packages:
+  - ✅ Removed CJS exports from `@promethean/agent` package.json
+  - ✅ Removed CJS exports from `@promethean/agents-workflow` package.json
+  - ✅ Removed CJS exports from `@promethean/pantheon` package.json
+  - ✅ Removed CJS exports from `@promethean/agent-management-ui` package.json
+  - ✅ Removed CJS exports from `@promethean/agent-ecs` package.json
+  - ✅ Removed CJS exports from `@promethean/agent-generator` package.json
+- **Task 5**: Converted `agent-context` manager to DI-based factory:
+  - ✅ Added `makeAuthService` factory function with DI support
+  - ✅ Added `AuthServiceConfig` and `AuthServiceDeps` types
+  - ✅ Maintained backward compatibility with original `JWTAuthService` class
+  - ✅ Exported new factory and types from index.ts
 
 ## 📁 Files Modified
 
