fix: remove cjs exports and enable esm-only in agents packages
- removed CJS exports from all agent package.json files
- added ESM-only exports across agent packages
- introduced DI-based auth service with `makeAuthService` factory
- added types and factory for auth service dependencies

--- a/changelog.d/2025.10.20.18.01.49.md
+++ b/changelog.d/2025.10.20.18.01.49.md
@@ -32,8 +32,15 @@ High-priority architectural fixes for the `packages/agents` tree to address doma
 - `/packages/agents/agent/src/nlp/executor.ts` - Added `makeExecutor` factory function, exported `MessageEnvelope`
 - `/packages/agents/agent/src/nlp/index.ts` - Updated `NLPService` to use factories, added `makeNLPService`
 - `/packages/agents/agent-orchestrator/src/agent-orchestrator.ts` - Updated store names
-- `/packages/agents/agent/package.json` - Added dependency on `@promethean/agent-protocol`
+- `/packages/agents/agent/package.json` - Added dependency on `@promethean/agent-protocol`, removed CJS exports
 - `/packages/agents/agent/tsconfig.json` - Removed invalid security package reference
+- `/packages/agents/agents-workflow/package.json` - Removed CJS exports
+- `/packages/agents/pantheon/package.json` - Removed CJS exports
+- `/packages/agents/agent-management-ui/package.json` - Removed CJS exports
+- `/packages/agents/agent-ecs/package.json` - Removed CJS exports
+- `/packages/agents/agent-generator/package.json` - Removed CJS exports
+- `/packages/agents/agent-context/src/auth.ts` - Added `makeAuthService` factory function and types
+- `/packages/agents/agent-context/src/index.ts` - Exported new factory and types
 
 ## 🔧 Technical Details
 
@@ -41,3 +48,5 @@ High-priority architectural fixes for the `packages/agents` tree to address doma
 - Dependency injection: Executors accept `agentRuntime`, `serviceManager`, `workflowManager`, plus optional `id`, `now`, `log`
 - Backward compatibility: Original classes remain as wrappers around factories
 - Store name standardization: `'sessions'` and `'agent-tasks'` are now the canonical names
+- ESM-only exports: All agent packages now use only ESM exports, no CJS compatibility layers
+- DI-based auth service: `makeAuthService` accepts injectable dependencies for JWT secret, config, ID generation, timing, and logging
