add pantheon natives and actor behaviors with passive/active distinction
- introduce actor-based agent spawning with role assignment
- enable dynamic context generation from semantic search across data sources
- allow agents to self-select data stores for history context
- support passive and active behaviors (e.g., research, code review, task updates)
- define behaviors as allowable in either state with configurable active behavior sets

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -8,3 +8,42 @@ a single unified format for creating agents that can be used in any platform.
 A single unified format for creating and managing tools used in any platform.
 A single unified format for using MCP servers in any platform.
 facilitates inter-agent communication
+
+## Pantheon natives
+
+Plus, it provides a new way of creating agents, unique to pantheon.
+context from all stores is easily formatted in OpenAI style message arrays
+construct agent context from inputs dynamicly.
+instead of a single rolling history that gets compacted
+context is generated from semantic search over any number of data sources of your choosing.
+The agent can it's self also choose to select a data store for it's history to be generated from
+
+Agents naturally share state this way, as history is shared between all of them,
+and it is access based on it's goals and recent actions.
+
+
+Agents are spawned as named entities called `Actors` with roles assigned to them.
+
+
+Actors read from a script defined in a Lisp DSL
+Actors are persistant entities in the pantheon system.
+Actors have both passive and active behavior.
+
+Behaviors are like:
+- research
+- review code,
+- review documentation
+- review tasks
+- add comments
+- pseudo code
+- work on a task
+- write tasks for the board
+- update tasks
+- pair with another agent
+
+Any behavior can be defined as being allowable in either state.
+
+Passive behaviors are actions your actor will take in the background
+You set a list of allowed active behaviors
+
+
