fix actors behavior definitions
- clarify passive, active, and persistent behaviors
- specify active behaviors respond to user input
- define passive behaviors occur without user input
- introduce "talents" as sets of related behaviors

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -27,7 +27,11 @@ Agents are spawned as named entities called `Actors` with roles assigned to them
 
 Actors read from a script defined in a Lisp DSL
 Actors are persistant entities in the pantheon system.
-Actors have both passive and active behavior.
+Actors have both passive, active, and persistant behaviors.
+Active behaviors are allowable in direct response to user input.
+Passive behaviors are allowable when no direct input has been given to be acted on.
+Persistent behaviors are always allowed
+
 
 Behaviors are like:
 - research
@@ -41,9 +45,7 @@ Behaviors are like:
 - update tasks
 - pair with another agent
 
-Any behavior can be defined as being allowable in either state.
 
-Passive behaviors are actions your actor will take in the background
-You set a list of allowed active behaviors
-
+For each actor, a list of allowable passive, active, and peristent behaviors are available.
+Set's of related behaviors are called "talents"
 
