fix actors behaviors documentation: update persistent to persistent, ...
- corrects "persistant" to "persistent" for consistency
- clarifies actor context is dynamic and distinct from agents
- explains role as reusable collection of behaviors and context sources
- improves structure and clarity of talents and script definitions

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -26,8 +26,8 @@ Agents are spawned as named entities called `Actors` with roles assigned to them
 
 
 Actors read from a script defined in a Lisp DSL
-Actors are persistant entities in the pantheon system.
-Actors have both passive, active, and persistant behaviors.
+Actors are persistent entities in the pantheon system.
+Actors have both passive, active, and persistent behaviors.
 Active behaviors are allowable in direct response to user input.
 Passive behaviors are allowable when no direct input has been given to be acted on.
 Persistent behaviors are always allowed
@@ -47,5 +47,15 @@ Behaviors are like:
 
 
 For each actor, a list of allowable passive, active, and peristent behaviors are available.
+
+Actors context is managed differently than most agents.
+Actors have a dynamic context.
+
+
 Set's of related behaviors are called "talents"
 
+Behaviors, talents are defined as a part of the actors scripts
+
+Actor's scripts can be one off, unique to them, or they can be defined abstractly with roles.
+A role is a collection of behaviors, talents, context sources, and logic which
+can be reused between agents with similar responsibilities
