fix agent context description: clarify state vs conversation context,...
- update description to emphasize state management, not conversation context
- specify that @promethean/persistence handles conversation context
- rename legacy state manager to indicate deprecation

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -1,5 +1,13 @@
 # Pantheon Agent Management Framework
 
+
+## Motivation
+
+so I'm thinking I want to finally use this agent framework for something.
+I want all of this agent code, consolidated down to the `@promethean/pantheon` package
+
+## Desrciption
+
 The pantheon management framework centralizes abstractions for agents across various platforms.
 it is a unified interface that allows you to create, define, and manage agents from any platform.
 It provides a centralized CLI and UI for managing agent sessions.
@@ -28,8 +36,10 @@ Agents are spawned as named entities called `Actors` with roles assigned to them
 Actors read from a script defined in a Lisp DSL
 Actors are persistent entities in the pantheon system.
 Actors have both passive, active, and persistent behaviors.
+Actors have
 Active behaviors are allowable in direct response to user input.
 Passive behaviors are allowable when no direct input has been given to be acted on.
+
 Persistent behaviors are always allowed
 
 
@@ -50,6 +60,7 @@ For each actor, a list of allowable passive, active, and peristent behaviors are
 
 Actors context is managed differently than most agents.
 Actors have a dynamic context.
+This means that through sue of a 
 
 
 Set's of related behaviors are called "talents"
@@ -59,3 +70,6 @@ Behaviors, talents are defined as a part of the actors scripts
 Actor's scripts can be one off, unique to them, or they can be defined abstractly with roles.
 A role is a collection of behaviors, talents, context sources, and logic which
 can be reused between agents with similar responsibilities
+
+Since Actors are long running processes, each actor must have a unique name.
+
