fix inbox file naming and content: remove stale .#2025.10.20.11.02.33...

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -6,6 +6,10 @@
 so I'm thinking I want to finally use this agent framework for something.
 I want all of this agent code, consolidated down to the `@promethean/pantheon` package
 
+I've been working on all of this agent related stuff in `@promethen/opencode-client` as
+an agent orchestration/intercommunication thing,
+but what I really want is something more abstract.
+
 ## Desrciption
 
 The pantheon management framework centralizes abstractions for agents across various platforms.
