feat(docs): add agent import/export sections
- introduce agent import from claude tool
- add agent export for use in other tools
- improve inbox documentation structure for agent management

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -77,3 +77,10 @@ can be reused between agents with similar responsibilities
 
 Since Actors are long running processes, each actor must have a unique name.
 
+## Importing agents from other tools
+
+Pantheon can import actors as agents from:
+- claude
+- 
+
+## Exporting actors as agents for other tools
