fix: update agent import/export documentation
- rename "Importing agents" to "Importing and export agents"
- update source list to include opencode and openai sdk
- remove obsolete "Exporting actors" section

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -77,10 +77,10 @@ can be reused between agents with similar responsibilities
 
 Since Actors are long running processes, each actor must have a unique name.
 
-## Importing agents from other tools
+## Importing and export agents from other agentic tool kits
 
-Pantheon can import actors as agents from:
+Pantheon can import and export actors as agents for:
 - claude
-- 
+- opencode
+- openai sdk (we are built on top of it)
 
-## Exporting actors as agents for other tools
