fix docs: list pantheon modules in inbox.md
- add modules for pantheon
- clarify module groupings
- improve readability of module list

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -1,7 +1,15 @@
 # Pantheon Agent Management Framework
 
 We've got a lot of code all over the place, many designs.
-It starts to come together as something unique here
+It starts to come together as something unique here.
+
+The modules for pantheon are spread around the following modules:
+- `packages/ai/*`
+- `packages/opencode-client`
+- `packages/opencode-unified`
+- `packages/kanban `
+- `packages/frontends`
+- `packages/agents/*`
 
 
 ## Motivation
