add omni and duck packages to module list
- include `packages/omni/*` in module list
- include `packages/duck*` in module list

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -10,6 +10,9 @@ The modules for pantheon are spread around the following modules:
 - `packages/kanban `
 - `packages/frontends`
 - `packages/agents/*`
+- `packages/omni/*
+- `packages/duck*`
+- 
 
 
 ## Motivation
